# cfps-lte-redirection

./: README.md
openbts/: CommonLibs.patch  dev.patch  liba53.patch  openbts.patch  smqueue.patch  subscriberRegistry.patch
openbts/liba53/: CMakeLists.txt
srsran/: attack.patch
uhd/: 0001-python3.patch  0002-boost-math.patch
unused/: srsran-libiio-support.patch
